# token-insight

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.scratch  README.md  README.zh-CN.md  compose.yml
backend/: Cargo.toml
backend/assets/: pricing-snapshot.json
backend/src/: lib.rs  main.rs  pricing.rs
backend/src/api/: mod.rs
backend/src/domain/: filter.rs  mod.rs  models.rs
backend/src/ingest/: mod.rs
backend/src/social/: mod.rs
backend/src/sources/: mod.rs
backend/src/storage/: db.rs  mod.rs
backend/tests/: export_routes.rs  fixture_parsers.rs
backend/tests/fixtures/amp/: sample.json
backend/tests/fixtures/claude/: sample.jsonl
backend/tests/fixtures/codex/: sample.jsonl
backend/tests/fixtures/codex-headless/: sample.jsonl
backend/tests/fixtures/cursor/: usage.csv
backend/tests/fixtures/droid/: sample.json
backend/tests/fixtures/gemini/: sample.json
backend/tests/fixtures/kilo/: sample.json
backend/tests/fixtures/kimi/: sample.json
backend/tests/fixtures/litellm/: sample.jsonl
backend/tests/fixtures/mux/: sample.json
backend/tests/fixtures/octofriend/: seed.sql
backend/tests/fixtures/openclaw/: sample.json
backend/tests/fixtures/opencode/: sample.json
backend/tests/fixtures/pi/: sample.json
backend/tests/fixtures/qwen/: sample.json
backend/tests/fixtures/roo-code/: sample.json
backend/tests/fixtures/screenshot/: cursor-week.csv
backend/tests/fixtures/synthetic/: sample.json
docs/: github-launch-checklist.md
frontend/: index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
(+53 files in other folders)
