[package]
name = "token-insight"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
directories = "6.0"
futures = "0.3"
hex = "0.4"
notify = "6.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
resvg = "0.45"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.16"
